devscripts (2.11.10) UNRELEASED; urgency=low

  * debchange:
    - Query name for stable-backport from distro-info.
    - On Ubuntu always default to targeting the release that it's run from,
      not the current devel release, since its primary use on stable releases
      will be for preparing PPA uploads. (LP: #1001068)

 -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 23:33:41 +0200

devscripts (2.11.9) unstable; urgency=low

  [ David Prévot ]
  * French translation update.

  [ Ron Lee ]
  * cowpoke: Properly strip the arguments to dpkg --compare-versions

  [ Christoph Berg ]
  * debcheckout: Also recognize bzr+ssh:// schema.

  [ Bernhard R. Link ]
  * debchange: fix NMU detection to not NMU QA packages (Closes: #676881)

  [ James McCoy ]
  * debchange: Add more documentation about the effects of changelog
    heuristic.  (Closes: #673974)
  * mk-build-deps:
    + Provide a more descriptive README.Debian for generated packages.  Thanks
      to chrysn for the patch.  (Closes: #675337)
    + Do not install Recommends by default.  (Closes: #575245)

  [ Benjamin Drung ]
  * debchange: Use the Dpkg::Vendor Perl API directly to avoid the overhead
    of the command line dpkg-vendor script.
  * Use dpkg-buildflags for C code.
  * wrap-and-sort: Fix damaging debian/install with no newline at the
    end of file (LP: #1014365).

 -- Benjamin Drung <bdrung@debian.org>  Sun, 17 Jun 2012 22:56:26 +0200

devscripts (2.11.8) unstable; urgency=low

  [ David Prévot ]
  * French translation update.

  [ James McCoy ]
  * dd-list:
    + Recognize -h argument, as documented.
    + Don't error when given multiple binary packages from the same source.
      (Closes: #672309)
  * Also note DEBCHANGE_MAINTTRAILER change in NEWS entry for 2.11.7.
    (Closes: #672973)
  * dget:
    + Fix handling of sources.list entries with a port. (Closes: #672460) Still
      can't handle entries at the same domain but different ports until
      #154868 is fixed.
  * debcheckout: